--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
             "request": "launch",
             "name": "Debug",
             "program": "python",
-            "args": ["hello.py"],
-            "cwd": "${workspaceFolder}/build"
+            "args": ["main.py"],
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
